--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "mysql-crud-app",
+  "name": "node-mqsql-crud-app",
   "version": "1.0.0",
-  "description": "sql node app",
-  "main": "app.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "clark drishinski",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "ejs": "^3.0.1",
-    "express": "^4.17.1",
-    "express-fileupload": "^1.1.6",
-    "mysql": "^2.17.1",
+    "body-parser": "^1.18.3",
+    "ejs": "^2.6.1",
+    "express": "^4.16.3",
+    "express-fileupload": "^0.4.0",
+    "mysql": "^2.15.0",
     "req-flash": "0.0.3"
   }
 }
